projects/kit/components/toast/toast.style.less
@import '@taiga-ui/styles/utils';

:host:host {
    inset: 1.625rem 0;
    margin: 0 2rem;
    touch-action: none;
    animation-fill-mode: both;

    &:nth-of-type(1) {
        grid-row: 5;
    }

    &:nth-of-type(2) {
        grid-row: 4;
    }

    &:nth-of-type(3) {
        grid-row: 3;
    }

    &:nth-of-type(4) {
        grid-row: 2;
    }

    &:nth-of-type(5) {
        grid-row: 1;
    }

    &[data-inline='center'] {
        --tui-from: translateY(-2rem);
    }

    &.tui-enter {
        place-items: end;
        animation-name: tuiSlide, tuiCollapse;
    }

    &.tui-leave {
        animation-name: tuiFade, tuiCollapse;

        &:first-child {
            animation-name: tuiFade;
        }
    }

    &[data-block='end'] {
        inset: -1.625rem 0;

        &[data-inline='center'] {
            --tui-from: translateY(6rem);
        }
    }

    &._mobile {
        inset: 0;

        &.tui-enter {
            animation-delay: var(--tui-duration);
        }

        &.tui-leave {
            place-items: end;
            animation-name: tuiSlide, tuiCollapse;
        }
    }
}

